multi agent connection with mtls (#64)
* multi agent connection with mtls

* fixed the port info for connecting to agent

* changed make file to build linux image

---------
